--- a/BlogApplication/Views/Shared/_Layout.cshtml
+++ b/BlogApplication/Views/Shared/_Layout.cshtml
@@ -14,6 +14,9 @@
         <a asp-controller="Home" asp-action="Post">
             Post
         </a>
+        <a asp-controller="Home" asp-action="Edit">
+            Edit
+        </a>
 
     </div>
     <div>
