--- a/BlogApplication/Views/Panel/Edit.cshtml
+++ b/BlogApplication/Views/Panel/Edit.cshtml
@@ -4,7 +4,8 @@
 
 }
 <div>
-    <form method="post" asp-controller="Home" asp-action="Edit">
+    <input asp-for="Id" type="hidden"/>
+    <form method="post" asp-controller="Panel" asp-action="Edit">
         <div>
             <label>Title</label>
             <input asp-for="Title" />
