--- a/BlogApplication/Views/Home/Index.cshtml
+++ b/BlogApplication/Views/Home/Index.cshtml
@@ -1,4 +1,4 @@
-﻿@model IEnumerable<Post>
+﻿@model IndexViewModel
 @{ 
     ViewBag.Title = "Blog website";
     ViewBag.Description = "This blog is My personal blog as an ASP.NET Core 3.1 Project";
@@ -13,7 +13,7 @@
 
     @*<img src="~/content/static/easy-effective-tips-starting-blog.jpg" width="500"/>*@
 
-    @foreach (Post post in Model)
+    @foreach (Post post in Model.Posts)
     {
     <a class="post" asp-controller="Home" asp-action="Post" asp-route-id="@post.Id">
         @if (!String.IsNullOrEmpty(post.Image))
@@ -33,4 +33,23 @@
 
     }
 
+<div class="pages">
+    @if (Model.PageNumber > 1)
+    {
+        <a asp-action="Index" asp-controller="Home" asp-route-category="@Model.Category" asp-route-pageNumber="@(Model.PageNumber -1)"> &lt; </a>
+
+    }
+
+    @for (int i = 1; i <= Model.PageCount; i++)
+    {
+        <a class="@(i == Model.PageNumber ? "active" : "")" asp-action="Index" asp-controller="Home" asp-route-category="@Model.Category" asp-route-pageNumber="@(i)"> @i </a>
+
+    }
+
+    @if (Model.NextPage)
+    {
+        <a asp-action="Index" asp-controller="Home" asp-route-category="@Model.Category" asp-route-pageNumber="@(Model.PageNumber +1)">></a>
+    }
+
+</div>
 </div>
