--- a/BlogApplication/Views/Shared/_Layout.cshtml
+++ b/BlogApplication/Views/Shared/_Layout.cshtml
@@ -28,8 +28,14 @@
             <a asp-controller="Panel" asp-action="Edit">
                 Create Post
             </a>
+
             @if (User.Identity.IsAuthenticated)
             {
+                @if (User.IsInRole("admin"))
+                {
+                <a asp-controller="Panel" asp-action="Index">Admin Panel</a>
+                }
+
                 <a asp-controller="Auth" asp-action="Logout">
                     Logout
                 </a>
@@ -42,9 +48,9 @@
                 </a>
             }
 
-            <a asp-controller="Panel" asp-action="Index">
-                Admin panel
-            </a>
+            @*<a asp-controller="Panel" asp-action="Index">
+            Admin panel
+        </a>*@
         </nav>
     </div>
     <div>
